ssl/traefik-dashboard-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-lb
  namespace: kube-system
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: dashboard
  selector:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/name: traefik
