ssl/traefik-dashboard-ingress-staging.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard-ingress
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
  - hosts:
    - traefik.k3s.dobson.dev
    secretName: traefik-staging-tls
  rules:
  - host: traefik.k3s.dobson.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-dashboard-lb # Use our existing LoadBalancer service
            port:
              number: 8080
